--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -2,11 +2,27 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>{% block title %}Base title{% endblock %}</title>
+    <style type="text/css">
+        .nav-link {
+            color: #ffffff;
+        }
+
+        .nav-link:hover {
+            color: #eb34e8;
+        }
+    </style>
 </head>
 
 <body>
     <div id="content" name="content">
         <div class="row justify-content-center">
+            <nav class="navbar navbar-dark bg-dark">
+              <div class="container-fluid justify-content-start">
+                <a class="navbar-brand" href="#">WebChat</a>
+                {% block navigation %}
+                {% endblock %}
+              </div>
+            </nav>
                 {% block content %}
                 {% endblock %}
         </div>
