--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -18,7 +18,7 @@
         <div class="row justify-content-center">
             <nav class="navbar navbar-dark bg-dark">
               <div class="container-fluid justify-content-start">
-                <a class="navbar-brand" href="#">WebChat</a>
+                <a class="navbar-brand" href="/">WebChat</a>
                 {% block navigation %}
                 {% endblock %}
               </div>
