--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="/create-room">Create Room</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Profile</a>
+                    <a class="nav-link" href="/profile">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
