--- a/chat/templates/chat/profile.html
+++ b/chat/templates/chat/profile.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} Create Room {% endblock %}
+{% block title %} Profile {% endblock %}
 
 {% block navigation %}
         {% if user.is_authenticated %}
@@ -11,10 +11,10 @@
                     <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/#">Create Room</a>
+                    <a class="nav-link" href="/create-room">Create Room</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">Profile</a>
+                    <a class="nav-link" href="/profile">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
@@ -37,11 +37,15 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <div id="create-room" class="col-8 justify-content-center">
-            <form method="POST" class="form-group">
+        <div id="profile" class="col-8 justify-content-center py-5">
+            <div class="text-center">
+                <img src="{{ user.profile.profile_pic.url }}" alt="profile pic" class="rounded-circle" />
+                <p class="fs-4 pt-2">{{ user.profile.handle }}</p>
+            </div>
+            <form method="POST" class="form-group" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-success">Create</button>
+                <button type="submit" class="btn btn-success mt-3">Edit</button>
             </form>
         </div>
     {% endif %}
