--- a/register/templates/register/signup.html
+++ b/register/templates/register/signup.html
@@ -5,25 +5,29 @@
 {% block title %} Sign Up {% endblock %}
 
 {% block navigation %}
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/login">Sign In</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sign-up">Sign Up</a>
-            </li>
-        </ul>
+       {% if not user.is_authenticated %}
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Sign In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sign-up">Sign Up</a>
+                </li>
+            </ul>
+        {% endif %}
 {% endblock %}
 
 {% block content %}
+    {% if not user.is_authenticated %}
     <div id="register" class="col-8 justify-content-center">
-        <form method="POST" class="form-group">
+        <form method="POST" class="form-group" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
             <button type="submit" class="btn btn-success">Sign Up</button>
         </form>
     </div>
+    {% endif %}
 {% endblock %}
