--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,50 +2,60 @@
 
 {% block title %}Main title{% endblock %}
 
-{% block navigation %}
-        {% if user.is_authenticated %}
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/create-room">Create Room</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/profile">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
-            </ul>
-        {% else %}
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Sign In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sign-up">Sign Up</a>
-                </li>
-            </ul>
-        {% endif %}
-{% endblock %}
-
 {% block content %}
 
     {% if user.is_authenticated %}
+
+        <style type="text/css">
+            .link-dark:hover {
+                color: #eb34e8;
+            }
+        </style>
+
         <div id="home_menu" class="col-8 justify-content-center">
 
             <h1 class="my-4">My Rooms</h1>
             <hr class="mt-0 mb-4">
 
-            {% for room in user.room_set.all %}
-                <div class="col-sm-4">
-                    <p><a href="/chat/{{room.id}}">{{room.name}}</a></p>
-                </div>
+            <div class="card">
+                <ul class="list-group list-group-flush">
+                    {% for room in page %}
+                        <li class="list-group-item">
+                            <a class="link-dark text-decoration-none" href="/chat/{{ room.id }}">{{ room.name }}</a>
+                            {% if room.creator.id == user.id %}
+                                <form method="POST" class="form-group">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-success mr-2 mt-2 btn-sm" name="edit" value="{{ room.id }}">Edit</button>
+                                    <button type="submit" class="btn btn-danger ml-2 mt-2 btn-sm" name="delete" value="{{ room.id }}">Delete</button>
+                                </form>
+                            {% else %}
+                                <form method="POST" class="form-group">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-danger mt-2 btn-sm" name="leave" value="{{ room.id }}">Leave</button>
+                                </form>
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+
+            {% if page.has_previous %}
+                <a class="btn btn-outline-info mb-4 mt-2" href="?page=1">First</a>
+                <a class="btn btn-outline-info mb-4 mt-2" href="?page={{ page.previous_page_number }}">Previous</a>
+            {% endif %}
+
+            {% for page_num in page.paginator.page_range %}
+                {% if page.number == num %}
+                    <a class="btn btn-info mb-4 mt-2" href="?page={{ page_num }}">{{ page_num }}</a>
+                {% elif page_num > page.number|add:'-2' and page_num < page.number|add:'2' %}
+                    <a class="btn btn-outline-info mb-4 mt-2" href="?page={{ page_num }}">{{ page_num }}</a>
+                {% endif %}
             {% endfor %}
+
+            {% if page.has_next %}
+                <a class="btn btn-outline-info mb-4 mt-2" href="?page={{ page.next_page_number }}">Next</a>
+                <a class="btn btn-outline-info mb-4 mt-2" href="?page={{ page.paginator.num_pages }}">Last</a>
+            {% endif %}
 
         </div>
     {% else %}
@@ -87,8 +97,8 @@
             <hr class="mt-0 mb-4">
 
             <div id="join-us" class="py-4">
-                <p>You already have an account? Then login <a href="#">here</a>.</p>
-                <p>Join us <a href="#">here</a>.</p>
+                <p>You already have an account? Then login <a href="/login">here</a>.</p>
+                <p>Join us <a href="/sign-up">here</a>.</p>
             </div>
         </div>
     {% endif %}
