--- a/chat/templates/chat/join-room.html
+++ b/chat/templates/chat/join-room.html
@@ -2,15 +2,15 @@
 
 {% load crispy_forms_tags %}
 
-{% block title %} Create Room {% endblock %}
+{% block title %} Join Room {% endblock %}
 
 {% block content %}
     {% if user.is_authenticated %}
-        <div id="create-room" class="col-8 justify-content-center">
+        <div id="join-room" class="col-8 justify-content-center">
             <form method="POST" class="form-group">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-success">Create</button>
+                <button type="submit" class="btn btn-success">Join</button>
             </form>
         </div>
     {% endif %}
