--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,49 +1,171 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <meta charset="utf-8"/>
-    <title>Chat Room</title>
+    <title>Room #{{ room_name }}</title>
+    <style type="text/css">
+        body {
+        overflow-x:hidden;
+        }
+
+        .nav-link {
+            color: #ffffff;
+        }
+
+        .nav-link:hover {
+            color: #eb34e8;
+        }
+
+        #chat-log {
+            height: 50vh;
+            overflow-y: scroll;
+            word-break: break-word;
+        }
+    </style>
 </head>
 <body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
-    {{ room_id|json_script:"room-id" }}
-    <script>
-        const roomId = JSON.parse(document.getElementById('room-id').textContent);
+    {% if user.is_authenticated %}
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid justify-content-start">
+                <a class="navbar-brand" href="/">WebChat</a>
+                    {% if user.is_authenticated %}
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/create-room">Create Room</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/chat/join-room">Join Room</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/all-rooms">All Rooms</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/profile">Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout">Logout</a>
+                            </li>
+                        </ul>
+                    {% else %}
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/login">Sign In</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/sign-up">Sign Up</a>
+                            </li>
+                        </ul>
+                    {% endif %}
+            </div>
+        </nav>
 
-        const chatSocket = new WebSocket(
-            'ws://'
-            + window.location.host
-            + '/ws/chat/'
-            + roomId
-            + '/'
-        );
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+            <h1 class="my-4" style="text-align:center">{{ room_name }}</h1>
+            <hr class="mt-0 mb-4">
+            </div>
+            <div class="col-lg-4"></div>
+        </div>
 
-        chatSocket.onmessage = function(e) {
-            const data = JSON.parse(e.data);
-            document.querySelector('#chat-log').value += (data.message + '\n');
-        };
+        <div class="row mt-2">
+            <div class="col-lg-4"></div>
+            <div id="chat-log" class="col-lg-4 border border-primary rounded min-vh-25">
+                {% for message in messages %}
+                    {% if user.id == message.author.id %}
+                        <div class="col-lg-offset-6 mt-2" style="text-align: right">
+                            <img src="{{ message.author.profile.profile_pic.url }}" alt="" class="mx-2 rounded-circle" width="50" height="50" />
+                            <b>{{ message.author.profile.handle }}</b>: {{ message.content }}<br>
+                        </div>
+                    {% else %}
+                        <div class="mt-2">
+                            <img src="{{ message.author.profile.profile_pic.url }}" alt="" class="mx-2 rounded-circle" width="50" height="50" />
+                            <b>{{ message.author.profile.handle }}</b>: {{ message.content }}<br>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <div class="col-lg-4"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <div class="d-flex mb-3 mt-3">
+                    <input id="chat-message-input" type="text" class="form-control mx-2 float-start">
+                    <button id="chat-message-submit" class="btn btn-outline-secondary" type="button">Send</button>
+                </div>
+            </div>
+            <div class="col-lg-4"></div>
+        </div>
+        {{ room_id|json_script:"room-id" }}
+        {{ handle|json_script:"handle" }}
+        {{ user_id|json_script:"user-id" }}
+        {{ profile_pic|json_script:"profile-pic" }}
+        <script>
+            const roomId = JSON.parse(document.getElementById('room-id').textContent);
+            const handle = JSON.parse(document.getElementById('handle').textContent);
+            const userId = JSON.parse(document.getElementById('user-id').textContent);
+            const profilePic = JSON.parse(document.getElementById('profile-pic').textContent);
 
-        chatSocket.onclose = function(e) {
-            console.error('Chat socket closed unexpectedly');
-        };
+            const chatSocket = new WebSocket(
+                'ws://'
+                + window.location.host
+                + '/ws/chat/'
+                + roomId
+                + '/'
+            );
 
-        document.querySelector('#chat-message-input').focus();
-        document.querySelector('#chat-message-input').onkeyup = function(e) {
-            if (e.keyCode === 13) {  // enter, return
-                document.querySelector('#chat-message-submit').click();
-            }
-        };
+            chatSocket.onmessage = function(e) {
+                const data = JSON.parse(e.data);
+                let message_html = '';
+                if (data.user_id === {{ user.id }}) {
+                    message_html = '<div class="col-lg-offset-6" style="text-align: right">' +
+                                        '<img src="' + data.profile_pic + '" class="mx-2 rounded-circle" width="50" height="50" />' +
+                                        '<b>' + data.handle + '</b>' + ': ' + data.message + '<br>' +
+                                   '</div>';
+                }
+                else {
+                    message_html = '<div>' +
+                                        '<img src="' + data.profile_pic + '" class="mx-2 rounded-circle" width="50" height="50" />' +
+                                        '<b>' + data.handle + '</b>' + ': ' + data.message + '<br>' +
+                                    '</div>';
+                }
+                document.querySelector('#chat-log').innerHTML += message_html;
+            };
 
-        document.querySelector('#chat-message-submit').onclick = function(e) {
-            const messageInputDom = document.querySelector('#chat-message-input');
-            const message = messageInputDom.value;
-            chatSocket.send(JSON.stringify({
-                'message': message
-            }));
-            messageInputDom.value = '';
-        };
-    </script>
+            chatSocket.onclose = function(e) {
+                console.error('Chat socket closed unexpectedly');
+            };
+
+            document.querySelector('#chat-message-input').focus();
+            document.querySelector('#chat-message-input').onkeyup = function(e) {
+                if (e.keyCode === 13) {  // enter, return
+                    document.querySelector('#chat-message-submit').click();
+                }
+            };
+
+            document.querySelector('#chat-message-submit').onclick = function(e) {
+                const messageInputDom = document.querySelector('#chat-message-input');
+                const message = messageInputDom.value;
+                chatSocket.send(JSON.stringify({
+                    'message': message,
+                    'handle': handle,
+                    'user_id': userId,
+                    'profile_pic': profilePic
+                }));
+                messageInputDom.value = '';
+            };
+        </script>
+    {% endif %}
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 </body>
 </html>
