added autoscroll in chat window

--- a/chat/templates/chat/all-rooms.html
+++ b/chat/templates/chat/all-rooms.html
@@ -1,6 +1,6 @@
 {% extends 'chat/base.html' %}
 
-{% block title %}Main title{% endblock %}
+{% block title %}All Rooms{% endblock %}
 
 {% block content %}
 
@@ -14,7 +14,7 @@
 
         <div id="home_menu" class="col-8 justify-content-center">
 
-            <h1 class="my-4">My Rooms</h1>
+            <h1 class="my-4">All Rooms</h1>
             <hr class="mt-0 mb-4">
 
 
