--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,6 +1,6 @@
 {% extends 'chat/base.html' %}
 
-{% block title %}Main title{% endblock %}
+{% block title %}WebChat{% endblock %}
 
 {% block content %}
 
@@ -71,21 +71,21 @@
 
             <div id="features-list" class="row py-5">
                 <div id="feature-1" class="col-sm-4">
-                    <img src="https://media.istockphoto.com/vectors/sms-speech-bubbles-on-mobile-phone-screen-chat-messages-notification-vector-id943765692" alt="chat-image1"
+                    <img src="media/images/chat-room.png" alt="chat-image1"
                         style="width: 400px; height: 400px;" class="img-fluid img-thumbnail"
                     />
                     <h3>Your own chat room</h3>
                     <p>Create your own chat room and share it with others</p>
                 </div>
                 <div id="feature-2" class="col-sm-4">
-                    <img src="https://media.istockphoto.com/vectors/chat-messages-notification-on-smartphone-vector-illustration-flat-vector-id1026973286?s=612x612" alt="chat-image2"
+                    <img src="media/images/chat-room2.png" alt="chat-image2"
                          style="width: 400px; height: 400px;" class="img-fluid img-thumbnail"
                     />
-                    <h3>Not only text</h3>
-                    <p>Use different ways of sending messages like images and audios</p>
+                    <h3>Join other rooms</h3>
+                    <p>Communicate with others by joining their rooms</p>
                 </div>
                 <div id="feature-3" class="col-sm-4">
-                    <img src="https://media.istockphoto.com/vectors/mobile-phone-chat-message-notifications-with-man-and-woman-avatar-vector-id1157918880?s=612x612" alt="chat-image3"
+                    <img src="media/images/chat-room3.png" alt="chat-image3"
                          style="width: 400px; height: 400px;" class="img-fluid img-thumbnail"
                     />
                     <h3>Present yourself</h3>
