--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -1,8 +1,13 @@
 <html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <title>{% block title %}Base title{% endblock %}</title>
+    <title>{% block title %}WebChat{% endblock %}</title>
     <style type="text/css">
+
+        body {
+        overflow-x:hidden;
+        }
+
         .nav-link {
             color: #ffffff;
         }
