--- a/chat/templates/chat/create-room.html
+++ b/chat/templates/chat/create-room.html
@@ -10,7 +10,7 @@
             <form method="POST" class="form-group">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-success">Create</button>
+                <button type="submit" class="btn btn-success mt-2">Create</button>
             </form>
         </div>
     {% endif %}
