--- a/chat/templates/chat/profile.html
+++ b/chat/templates/chat/profile.html
@@ -8,7 +8,7 @@
     {% if user.is_authenticated %}
         <div id="profile" class="col-8 justify-content-center py-5">
             <div class="text-center">
-                <img src="{{ user.profile.profile_pic.url }}" alt="profile pic" class="rounded-circle" />
+                <img src="{{ user.profile.profile_pic.url }}" alt="profile pic" width="100" height="100" class="rounded-circle" />
                 <p class="fs-4 pt-2">{{ user.profile.handle }}</p>
             </div>
             <form method="POST" class="form-group" enctype="multipart/form-data">
